--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
+    "sass": "^1.83.4",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -34,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "sass-loader": "^13.3.3"
   }
 }
