--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
